Added exercises for Spring AOP and other Spring features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/dev
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+app.greeting=Howdy
+app.name=Francissimo
+
+
