Updated configurations, added postgresql profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,7 @@
 
 server.port=9090
 
-logging.level.web=DEBUG
-logging.level.org.springframework.jdbc.datasource.init=DEBUG
-logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl=ERROR
-
-spring.devtools.add-properties=true
-
-spring.data.rest.basePath=/api
-
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database=postgresql
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/dev
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-app.greeting=Howdy
-app.name=Francissimo
+app.greeting=SALUT
+app.name=EDW
 
 
