--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+        <appengine.app.version>1</appengine.app.version>
+        <appengine.target.version>1.9.71</appengine.target.version>
+        <appengine-maven-plugin-version>1.3.2</appengine-maven-plugin-version>
 	</properties>
 
 	<dependencies>
@@ -75,6 +78,24 @@
             <version>1.7.30</version>
         </dependency>
         <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+            <version>${appengine.target.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-testing</artifactId>
+            <version>${appengine.target.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-stubs</artifactId>
+            <version>${appengine.target.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
@@ -87,6 +108,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>${appengine-maven-plugin-version}</version>
+            </plugin>
 		</plugins>
 	</build>
 
